css/style.css
/* ... */
.info {
  font-family: var(--ff-heading);
  font-size: var(--fs-650);
  color: var(--clr-neutral-900);
  text-transform: uppercase;
}

.fragment {
  display: block;
}
.fragment[hiding] {
  animation: fade-out var(--anim-duration) var(--anim-mode);
  opacity: 0;
}
.fragment.hidden {
  display: none;
}
.fragment.visible {
  opacity: 1;
  animation: fade-in var(--anim-duration) var(--anim-mode);
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fade-out {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}


/* Crew page */
main.crew picture {
  border-bottom: 1px solid var(--clr-primary-800);
  margin-bottom: var(--gap-500);
}
.crew-title {
  text-align: center;
  text-transform: uppercase;
}
.crew-title .fs-heading-1 {
  color: var(--clr-neutral-900);
  font-size: var(--fs-650);
}
.crew-title .fs-heading-2 {
  color: var(--clr-neutral-500);
  font-size: var(--fs-500);
}

@media (min-width:768px) {
  body {
    padding: 0;
  }

  body.home {
    background-image: url('../assets/home/background-home-tablet.jpg');
    row-gap: 0;
  }
  body.destination {
    background-image: url('../assets/destination/background-destination-tablet.jpg');
  }
  body.crew {
    background-image: url('../assets/crew/background-crew-tablet.jpg');
  }

  header {
    grid-template-columns: max-content max-content;
    justify-content: space-between;
    align-items: stretch;
    min-height: 10vh;
  }

  .main-nav {
    flex-flow: row;
    align-items: stretch;
    gap: var(--gap-900);
  }

  .nav-phone-menu-icon,
  .nav-phone-menu,
  .nav-phone-menu-close {
    display: none;
  }

  .nav-link {
    display: flex;
    align-items: center;
    cursor: pointer;
    border-bottom: 2px solid transparent;
    transition: border var(--anim-duration) var(--anim-mode);
  }
  .nav-link::before {
    content: none;
  }
  .nav-link:hover,
  .nav-link:focus-visible {
    border-bottom: 2px solid var(--clr-neutral-500);
  }
  .main-nav .nav-link.selected {
    border-right:none;
    border-bottom: 2px solid var(--clr-neutral-900);
  }

  .nav-logo {
    align-self: center;
    padding-inline: var(--gap-700);
  }

  .nav-container {
    position: static;
    width: auto;
    display: flex;
    align-items: stretch;
    background: var(--clr-neutral-200);
    padding: 0;
  }

  .main-nav {
    padding-inline: clamp(2em, 5vw, 6em);
  }

  main.home {
    width: 450px;
  }

  .home-button {
    --clr-neutral-500: hsla(0, 0%, 59%, .4);
    width: 242px;
    transition: box-shadow var(--anim-duration) var(--anim-mode);
  }
  .home-button:hover {
    box-shadow: 0 0 0 50px var(--clr-neutral-500);
    cursor: pointer;
  }

  /* Destination page */
  main.page {
    padding-inline: var(--gap-500);
    width: 100%;
  }
  main.page img {
    max-width: 300px;
    max-height: 100%;
  }
  .page-subtitle {
    justify-self: start;
  }
  .page-container {
    width: 575px;
    margin-inline: auto;
  }
  .info-box {
    display: flex;
    flex-flow: row;
    row-gap: 0;
    justify-content: space-evenly;
    text-align: center;
  }

  /* Crew page */
  main.crew {
    height: 100%;
  }
  main.crew picture {
    border: none;
    margin: 0;
    grid-row: 3;
    align-self: flex-end;
  }
  main.crew img {
    max-width: 100%;
    height: 450px;
  }
  .page-container .page-nav {
    grid-row: 3;
  }
}

@media (min-width:1200px) {
  body.home {
    background-image: url('../assets/home/background-home-desktop.jpg');
  }
  body.destination {
    background-image: url('../assets/destination/background-destination-desktop.jpg');
  }
  body.crew {
    background-image: url('../assets/crew/background-crew-desktop.jpg');
  }

  header {
    padding-top: var(--gap-600);
    grid-template-columns: max-content auto max-content;
    justify-content: normal;
    min-height: 16vh;
  }

  .nav-divider {
    display: block;
    align-self: center;
    height: 1px;
    background-color: var(--clr-neutral-300);
    margin-right: -75px;
  }

  .main-nav .nav-link {
    padding-left: 24px;
    position: relative;
  }
  .main-nav .nav-link::before {
    content: attr(data-number);
    left: -5px;
    z-index: 2;
  }

  .nav-container {
    background-color: transparent;
    backdrop-filter: blur(var(--bg-blur));
    z-index: -1;
  }

  .main-nav {
    padding-inline: clamp(4em, 7vw ,18em);
  }

  main.home {
    justify-self: center;
    display: grid;
    grid-template-columns: auto 60%;
    grid-template-rows: auto;
    height: auto;
    width: auto;
    max-width: min(80%, 1180px);
    margin-block: 10rem;
  }

  .home-slogan-container {
    align-self: end;
    text-align: left;
  }

  .home-button-container {
    align-self: end;
    justify-self: end;
  }

  .home-button {
    width: 274px;
  }

  /* Destination page */
  main.destination,
  main.crew {
    grid-template: auto 1fr / 1fr 1fr;
    padding-inline: 8rem;
    column-gap: var(--gap-800);
  }
  main.page img {
    max-width: 100%;
  }
  .page-subtitle {
    grid-column: 1 / 3;
  }
  .page-container {
    justify-items: start;
    row-gap: var(--gap-800);
  }
  .page-text {
    text-align: left;
    --fs-400: 1.125rem;
  }
  .info-box {
    text-align: left;
    justify-content: flex-start;
  }
  .info-box > div {
    width: 50%;
  }

  /* Crew page */
  main.crew .page-subtitle {
    grid-column: 1;
    align-self: flex-start;
  }
   main.crew picture {
    grid-row: 1 / 3;
    grid-column: 2;
  }
  main.crew img {
    height: auto;
  }
  main.crew .page-container {
    align-self: center;
    width: 500px;
    margin-inline: 0;
    align-content: space-evenly;
    height: 100%;
  }
  .crew-title {
    text-align: left;
  }
}

